  and improved xgsdtof() a.k.a. Fdatime(). (VRI)
- bios/disk.c bios/disk.h: New flag UNIT_NATFEATS for units managed by NatFeats.
  Our internal drivers are never used for those ones. (VRI)
- bdos/fs.h bdos/fsio.c bdos/fsopnclo.c: Do not check Fopen() mode (R,W,RW)
  in Fread()/Fwrite() - just like Atari TOS. (RFB)

2014-03-09
- bdos/fs.h: Code cleanup: change int to WORD or UWORD as appropriate.  (RFB)
- bdos/fs.h bdos/fsdir.c bdos/fsopnclo.c: Code cleanup: use DOSTIME struct
  in DND, OFD, and xgsdtof(). (RFB)
- bdos/fsglob.c bdos/time.c bdos/time.h: Code cleanup: move time, date to
  time.c & make them UWORDs. (RFB)
- bdos/fs.h bdos/fsdir.c: Code cleanup: use DOSTIME struct in DTAINFO. (RFB)
- bdos/fsdir.c: Removed ugly casts in xgsdtof(). (VRI)
- bdos/fs.h: Change types of CLNO/RECNO to UWORD/ULONG & make them
  typedefs. (RFB)
- bdos/fs.h bdos/fsdir.c bdos/fsopnclo.c: Code cleanup: use DOSTIME
  struct in FCB. (RFB)

2014-03-10
- bdos/fs.h bdos/fsdir.c bdos/fsopnclo.c: Fix bug: a cross-directory rename
  inadvertently changed the file date/time. (RFB)

2014-03-16
- Makefile: Show the target RAM usage at the end of build. (VRI)

2014-03-17
- cli/cmdint.c: Fix bugs in EmuCON cp/mv when target is directory. (RFB)
- cli/cmdutil.c: Fix bug: SHOW displayed blank line for zero value. (RFB)
- cli/cmdint.c: Allow user to interrupt EmuCON cp/mv. (RFB)
- bdos/fsdrive.c: Return EDRIVE from ckdrv() for invalid drive. (RFB)
- cli/cmdint.c: Fix is_valid_drive() for drives > 'P'. (RFB)
- cli/cmdint.c: Improve EmuCON cp/mv error msgs for invalid drive. (RFB)
- cli/cmdint.c: Fix copyright date. (RFB)
- bdos/fsdir.c: Remove some useless #ifdefs. (RFB)
- cli/cmdedit.c: Fix bug: command prompt was overwritten if line was
  recalled after editing with left arrow key. (RFB)
- bdos/fs.h bdos/fsdir.c: Code cleanup: remove code permanently excluded
  by #defines. (RFB)
- aes/struct.h: Code cleanup: use #define value instead of magic number. (RFB)